# chatterbox-comprehensive-installer

./: GITHUB_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SIMPLE_SETUP.md  SIMPLIFIED_SETUP_SUMMARY.md  api_listener.py  chatterbox_tts_architecture.md  chatterbox_tts_architecture_v2.md  config.yaml  example_usage.py  install_chatterbox_tts.bat  install_chatterbox_tts.sh  interactive_setup.py  pyproject.toml  requirements.txt  requirements_simple.txt  run_server.bat  run_server.sh  setup.py  setup_chatterbox_tts.sh  setup_github.bat  setup_github.sh  simple_install.py  test_basic.py  test_setup.py  tts_processor.py
examples/: __init__.py  basic_usage.py
src/chatterbox_tts/: __init__.py  main.py
src/chatterbox_tts/api/: __init__.py  server.py
src/chatterbox_tts/cli/: __init__.py  main.py
src/chatterbox_tts/core/: __init__.py  audio_stitcher.py  config.py  document_parser.py  processor.py  voice_manager.py
